--- a/Ecommerice.html
+++ b/Ecommerice.html
@@ -266,7 +266,7 @@
           <div class="col-new">
             <p>Enjoy 20% Exclusive Off</p>
             <h1>Find Your Style</h1>
-            <small>If you're looking for high quility, All-American weekens adn work wear styles fro men , women and Junior, we are here for you.
+            <small>If you're looking for high quility, All-American weekens and work wear styles for men , women and Junior, we are here for you.
         </small>
           <br/>
           <a href="" class="btn" >Buy Now  &#8594</a>
